--- a/client/templates/client/user_projects.html
+++ b/client/templates/client/user_projects.html
@@ -13,17 +13,9 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        LISTA DE PROYECTOS
-        <small>Control panel</small>
+        RESUMEN DE PROYECTOS
+        <small>activos</small>
       </h1>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">
-            <i class="fa fa-dashboard"></i>
-            Home</a>
-        </li>
-        <li class="active">Dashboard</li>
-      </ol>
     </section>
 
     <!-- Main content -->
@@ -35,27 +27,18 @@
           <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">
-                Proyectos Activos
+                Lista de Proyectos
               </h3>
-              <div class="box-tools pull-right">
-                <button class="btn btn-box-tool" data-widget="collapse">
-                  <i class="fa fa-minus"></i>
-                </button>
-                <button class="btn btn-box-tool" data-widget="remove">
-                  <i class="fa fa-times"></i>
-                </button>
-              </div>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <div class="table-responsive">
+              <div class="table">
                 <table id="table_projects" class="table table-bordered table-striped">
                   <thead>
                     <tr>
                       <th>ID Proyecto</th>
-                      <th>Nombre</th>
+                      <th>Nombre del Proyecto</th>
                       <th>No. de Sistemas</th>
-                      <th>Fecha Creación</th>
                       <th>Estatus</th>
                       <th>Acciones</th>
                     </tr>
@@ -65,11 +48,10 @@
                     {% for project in project_list %}
                     <tr>
                       <td>
-                        <a href="/dash/projects/{{project.id}}">Proy-00{{project.id}}</a>
+                        <a href="/dash/projects/{{project.id}}">Proy00{{project.id}}</a>
                       </td>
                       <td>{{project.name}}</td>
                       <td>{{project.arduinos.count}}</td>
-                      <td>{{project.created_at}}</td>
 
                       {% if  project.id|isEven == 0%}
                         <td> <span class="label label-danger">{{project.get_estatus_display }}</span> </td>
@@ -80,7 +62,7 @@
                       <td>
                         <div class="btn-group">
                           <a href="/dash/projects/{{project.id}}" target="_self">
-                            <button  type="button" class="btn btn-success">Ver</button>
+                            <button  type="button" class="btn btn-success">Ver Proyecto</button>
                           </a>
                         </div>
                       </td>
@@ -118,11 +100,11 @@
 
   $(function () {
     $('#table_projects').DataTable({
-      "paging": true,
+      "paging": false,
       "lengthChange": false,
-      "searching": true,
+      "searching": false,
       "ordering": true,
-      "info": true,
+      "info": false,
       "autoWidth": false
     });
   });
