--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head lang="en">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>IoT Dashboard</title>
+  <title>SensaIT :.: Panel de control</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
