--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -18,6 +18,7 @@
     <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
       <span class="sr-only">Toggle navigation</span>
     </a>
+    {% comment %}
     <div class="navbar-custom-menu">
       <ul class="nav navbar-nav">
         <!-- Messages: style can be found in dropdown.less-->
@@ -210,13 +211,13 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{% static 'adminlte/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
+            <img src="{% static 'sensait/logos/Sensait_logo.png' %}" class="user-image" alt="User Image">
             <span class="hidden-xs">{{request.user}}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="{% static 'adminlte/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+              <img src="{% static 'sensait/logos/Sensait_logo.png' %}" class="user-image" alt="User Image">
               <p>
                 {{request.user}}
               </p>
@@ -250,6 +251,7 @@
         </li>
       </ul>
     </div>
+    {% endcomment %}
   </nav>
 </header>
 {% endblock main_header %}
@@ -265,7 +267,7 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src=" {% static 'adminlte/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+        <img src=" {% static 'sensait/logos/Sensait_logo.png' %}" class="img-image" alt="User Image">
       </div>
       <div class="pull-left info">
         <p>{{request.user}}</p>
