--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -149,11 +149,11 @@
   //##############################
 
   $('#table_projects').DataTable({
-    "paging": true,
+    "paging": false,
     "lengthChange": false,
     "searching": false,
     "ordering": true,
-    "info":true,
+    "info":false,
   });
 
 
