FIX - Date format fix for UTC on EPOCH data

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -34,10 +34,9 @@
     <div id="transmisores" class="">
     </div>
 
-    <div class="row">
 
+  <div class="row">
     <div class="col-md-12">
-      <!-- TABLE: LATEST ORDERS -->
       <div class="box box-info">
         <div class="box-header with-border">
           <h3 class="box-title">
@@ -91,16 +90,9 @@
               </tbody>
             </table>
           </div>
-          <!-- /.table-responsive      <span class="label label-success">Activo</span>  -->
         </div>
-
-
-        <!-- /.box-body -->
-        <!-- /.box-footer -->
       </div>
-      <!-- /.box -->
-    </div>
-
+    </div><!-- /.box -->
   </div>
 
   </section>
@@ -113,6 +105,8 @@
 
 {% block content_js %}
   <script type="text/javascript" src="{% static 'js/ws4redis.js'  %}"></script>
+
+  <script src="{% static 'plugins/momentjs/moment.min.js' %}"></script>
 
   <script src="{% static 'plugins/dygraphs/dygraph-combined.js' %}"></script>
   <script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
@@ -466,32 +460,35 @@
   }
 
   function convertEpoch2Date(epochData){
-    var d = new Date(0);
-    d.setUTCSeconds(epochData);
+    if(parseInt(epochData)>10000){
+      var d = new Date(parseInt(epochData)*1000);
+      var day =  d.getUTCDate() + 1 +'';
+      var month =  d.getUTCMonth() + 1 +'';
+      var hour    = d.getUTCHours() +'';
+      var minutes = d.getUTCMinutes()+'';;
+      var seconds = d.getUTCSeconds()+'';;
 
-    var day =  d.getDay() + 1 +'';
-    var month =  d.getMonth() + 1 +'';
+      //NO me gusta... pero no se me ocurre otra forma...
+      if(day.length == 1)
+        day = '0'+day;
+      if(month.length == 1)
+        month = '0'+month;
+      if(hour.length == 1)
+        hour = '0'+hour;
+      if(minutes.length == 1)
+        minutes = '0'+minutes;
+      if(seconds.length == 1)
+        seconds = '0'+seconds;
 
-    var hour    = d.getHours() +'';
-    var minutes = d.getMinutes()+'';;
-    var seconds = d.getSeconds()+'';;
+      var dateFormat = day +'/'+month+'/'+d.getUTCFullYear();
+      var timeFormat = hour+':'+minutes+':'+seconds;
 
-    //NO me gusta... pero no se me ocurre otra forma...
-    if(day.length == 1)
-      day = '0'+day;
-    if(month.length == 1)
-      month = '0'+month;
-    if(hour.length == 1)
-      hour = '0'+hour;
-    if(minutes.length == 1)
-      minutes = '0'+minutes;
-    if(seconds.length == 1)
-      seconds = '0'+seconds;
-
-    var dateFormat = day +'/'+month+'/'+d.getFullYear();
-    var timeFormat = hour+':'+minutes+':'+seconds;
-
-    return dateFormat + '               <b>' + timeFormat + '</b>';
+      console.log(dateFormat);
+      console.log(timeFormat);
+      return dateFormat + '               <b>' + timeFormat + '</b>';
+    }else{
+      return "Formato de Fecha Invalido";
+    }
   }
 
   function useWSData(msg){
