--- a/client/templates/client/user_iots.html
+++ b/client/templates/client/user_iots.html
@@ -10,8 +10,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Transmisor: <b>{{ arduino.name }}</b>
-        <small>Sistema Seleccionado</small>
+        Nombre Transmisor: <b>{{ arduino.name }}</b>
+        <small>Transmisor Seleccionado</small>
       </h1>
     </section>
 
@@ -48,7 +48,9 @@
                 <div class="box-body">
                   <dl class="dl-horizontal">
                     <dt>Cantidad de Sensores</dt>
-                    <dd>{{ arduino.sensors.count }} </dd>
+                    <dd>{{ arduino.sensors.count | add:"-1" }} </dd>
+
+                    {% comment %}
                     <dt>Estatus</dt>
                     <dd><span class="label label-success">Correcto</span></dd>
                     <dt>Epoch</dt>
@@ -59,7 +61,7 @@
                         </span>
                       {% endif %}
                     {% endfor %}
-
+                    {% endcomment %}
                   </dl>
                 </div><!-- /.box-body -->
               </div><!-- /.box -->
@@ -74,11 +76,10 @@
             <div class="box-header with-border">
               <h3 class="box-title">
                 Lista de sensores        -
-
                 {% for sensor in arduino.arduino_sensors.all %}
                   {% if  sensor.data_key == "field1" %}
                     <span id="sensor_{{ sensor.id}}">
-                      {{ sensor.sensor_data.last.data }}
+
                     </span>
                     {% endif %}
                   {% endfor %}
@@ -255,35 +256,36 @@
       }
     }
 
-
       function convertEpoch2Date(epochData){
-        var d = new Date(0);
-        d.setUTCSeconds(epochData);
+        if(parseInt(epochData)>10000){
+          var d = new Date(parseInt(epochData)*1000);
+          var day =  d.getUTCDate() + 1 +'';
+          var month =  d.getUTCMonth() + 1 +'';
+          var hour    = d.getUTCHours() +'';
+          var minutes = d.getUTCMinutes()+'';;
+          var seconds = d.getUTCSeconds()+'';;
 
-        var day =  d.getDay() + 1 +'';
-        var month =  d.getMonth() + 1 +'';
+          //NO me gusta... pero no se me ocurre otra forma...
+          if(day.length == 1)
+            day = '0'+day;
+          if(month.length == 1)
+            month = '0'+month;
+          if(hour.length == 1)
+            hour = '0'+hour;
+          if(minutes.length == 1)
+            minutes = '0'+minutes;
+          if(seconds.length == 1)
+            seconds = '0'+seconds;
 
-        var hour    = d.getHours() +'';
-        var minutes = d.getMinutes()+'';;
-        var seconds = d.getSeconds()+'';;
+          var dateFormat = day +'/'+month+'/'+d.getUTCFullYear();
+          var timeFormat = hour+':'+minutes+':'+seconds;
 
-        //NO me gusta... pero no se me ocurre otra forma...
-        if(day.length == 1)
-          day = '0'+day;
-        if(month.length == 1)
-          month = '0'+month;
-        if(hour.length == 1)
-          hour = '0'+hour;
-        if(minutes.length == 1)
-          minutes = '0'+minutes;
-        if(seconds.length == 1)
-          seconds = '0'+seconds;
-
-
-        var dateFormat = day +'/'+month+'/'+d.getFullYear();
-        var timeFormat = hour+':'+minutes+':'+seconds;
-
-        return dateFormat + '               <b>' + timeFormat + '</b>';
+          console.log(dateFormat);
+          console.log(timeFormat);
+          return dateFormat + '               <b>' + timeFormat + '</b>';
+        }else{
+          return "Formato de Fecha Invalido";
+        }
       }
 
   </script>
