--- a/client/templates/client/user_projects.html
+++ b/client/templates/client/user_projects.html
@@ -13,7 +13,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        RESUMEN DE PROYECTOS
+        LISTA DE PROYECTOS
         <small>activos</small>
       </h1>
     </section>
@@ -25,11 +25,7 @@
         <div class="col-xs-12">
           <!-- TABLE: LATEST ORDERS -->
           <div class="box box-info">
-            <div class="box-header with-border">
-              <h3 class="box-title">
-                Lista de Proyectos
-              </h3>
-            </div>
+
             <!-- /.box-header -->
             <div class="box-body">
               <div class="table">
@@ -38,8 +34,7 @@
                     <tr>
                       <th>ID Proyecto</th>
                       <th>Nombre del Proyecto</th>
-                      <th>No. de Sistemas</th>
-                      <th>Estatus</th>
+                      <th>No. de Transmisores</th>
                       <th>Acciones</th>
                     </tr>
                   </thead>
@@ -51,15 +46,8 @@
                         <a href="/dash/projects/{{project.id}}">Proy00{{project.id}}</a>
                       </td>
                       <td>{{project.name}}</td>
-                      <td>{{project.arduinos.count}}</td>
-
-                      {% if  project.id|isEven == 0%}
-                        <td> <span class="label label-danger">{{project.get_estatus_display }}</span> </td>
-                      {% else %}
-                        <td> <span class="label label-success">{{project.get_estatus_display }}</span> </td>
-                      {% endif %}
-
-                      <td>
+                      <td align="center">{{project.arduinos.count}}</td>
+                      <td align="center">
                         <div class="btn-group">
                           <a href="/dash/projects/{{project.id}}" target="_self">
                             <button  type="button" class="btn btn-success">Ver Proyecto</button>
